# postgres

./: 4_bytea_appendable_toaster_v1.patch  License.txt  README.md  cln  cmp  mk  n0_pgb_init.sql  n1_pgb_init.sql  n2_pgb_init.sql  pgb.sh  pgb_fdw.sh  pgb_fdw_test.sh  pgb_init.sh  pgb_test.sh  shdep.sh
contrib/: Makefile  meson.build
contrib/amcheck/: verify_heapam.c
contrib/bytea_toaster/: Makefile  bytea_toaster--1.0.sql  bytea_toaster.c  bytea_toaster.control  meson.build  toast_extended.c  toast_extended.h
contrib/dummy_toaster/: dummy_toaster--1.0.sql  dummy_toaster.c
contrib/hstore/: hstore_io.c
contrib/jsonb_plperl/: jsonb_plperl.c
contrib/jsonb_plpython/: Makefile  jsonb_lazy.c  jsonb_plpython.c  jsonb_plpython.h  jsonb_plpython3u--1.0.sql  jsonb_plpythonu--1.0.sql  numeric_plpython.c  numeric_plpython.h
contrib/jsonb_toaster/: Makefile  jsonb_toast_array.c  jsonb_toast_internals.c  jsonb_toaster--1.0.sql  jsonb_toaster.c  jsonb_toaster.control  jsonb_toaster.h
contrib/ltree/: Makefile  _ltree_gist.c  ltree--1.2--1.3.sql  ltree.h  ltree_gin.c  ltree_op.c  ltree_spgist.c
contrib/pageinspect/: heapfuncs.c
contrib/pg_stat_wait/: collector.c  (+2 more)
contrib/toastapi/: Makefile  dummy_toaster.c  meson.build  pg_toaster.h  pg_toastrel.h  toastapi--1.0.sql  toastapi.c  toastapi.control  toastapi.h  toastapi_internals.c  toastapi_internals.h  toastapi_sqlfuncs.c  toastapi_sqlfuncs.h  toaster_cache.c  toaster_cache.h  varatt_custom.h
contrib/toastapi/access/: toasterapi.h
contrib/toastapi/expected/: toastapi.out
contrib/toastapi/sql/: toastapi.sql
(+453 files in other folders)
